fixed brand section to show 1 image on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3609,14 +3609,26 @@
 
 		}
 
-		#brands {
-			padding: 6em 0 4em 0;
-			background-color: #424342;
+/* brands section */
+
+	#brands {
+		padding: 6em 0 4em 0;
+		background-color: #424342;
+	}
+
+		@media screen and (max-width: 736px) {
+			.mobilebrands {
+				width: 100%;
+				margin: auto;
+			}
+
 		}
 
-		.bumpup {
-			padding-top: 2em;
-		}
+
+
+	.bumpup {
+		padding-top: 2em;
+	}
 
 	#two {
 		padding: 6em 0 4em 0;
